--- a/long_read_qc/_bookdown.yml
+++ b/long_read_qc/_bookdown.yml
@@ -1,4 +1,4 @@
-book_filename: "Illumina Quality Control"
+book_filename: "Long read Quality Control"
 language:
   ui:
     chapter_name: "Chapter "
