--- a/long_read_qc/_output.yml
+++ b/long_read_qc/_output.yml
@@ -4,7 +4,7 @@ bookdown::gitbook:
   config:
     toc:
       before: |
-        <li><a>Illumina QC</a></li>
+        <li><a>Long read QC</a></li>
       after: |
         <li><a href="https://github.com/rstudio/bookdown" target="blank">Published with bookdown</a></li>
     edit: null
