--- a/Illumina_QC/_bookdown.yml
+++ b/Illumina_QC/_bookdown.yml
@@ -1,5 +1,6 @@
-book_filename: "Illumina Quality Control"
+book_filename: Illumina Quality Control
 language:
   ui:
-    chapter_name: "Chapter "
-delete_merged_file: FALSE
+    chapter_name: 'Chapter '
+delete_merged_file: no
+before_chapter_script: scripts/webex.R
