--- a/Download_bookdowns/resources_book/_bookdown.yml
+++ b/Download_bookdowns/resources_book/_bookdown.yml
@@ -1,5 +1,6 @@
-book_filename: "Introduction to sequencing data and quality control resources"
+book_filename: Introduction to sequencing data and quality control resources
 language:
   ui:
-    chapter_name: "Chapter "
-delete_merged_file: FALSE
+    chapter_name: 'Chapter '
+delete_merged_file: no
+before_chapter_script: scripts/webex.R
